feat: added rock pod cluster of servers